# rptl

./: .gitignore  README.md  design.md  generate_sort_daily_videos.sh  generate_timelapse.sh  requirements.txt  setup.cfg
src/timelapse/: __main__.py  camera.py  daemon.py  mock_camera.py  oldmain.py  sort_colour_profile.py  timestamp_images.py  video.py  zmq_client_sender.py
web/: README.md  files.py  web.py  zmq_sender.py
web/static/: style.css
web/templates/: base.html  image.html  image_list.html  index.html  video.html  video_list.html
