[metadata]
name = timelapse
version = 0.0.1
description = tbd

[options]
packages = find_namespace:
install_requires =
    pyzmq
#     picamera2>=0.3.12
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    timelapse = timelapse.__main__:main

[options.packages.find]
where = src
