[metadata]
name = rptl
version = 0.0.1
description = This tool is designed to take still images every 5 minutes using a raspberry pi camera. Then turn them images into a timelapse video.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linnit/rptl
python_requires = >=3.9

[options]
packages = find_namespace:
install_requires =
    docopt
    pyzmq
#     picamera2>=0.3.12
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    rptl = timelapse.__main__:main

[options.packages.find]
where = src
